--- a/web/client/app/SongBook/Partial/list.html
+++ b/web/client/app/SongBook/Partial/list.html
@@ -4,14 +4,14 @@
         <layout-page-button class="nav-link-default">
             <a href="#/songs/new">
                 <span class="fa fa-fw fa-plus"></span>
-                Add a new song
+                {{ 'new_song'|translate }}
             </a>
         </layout-page-button>
     </layout-page-buttons>
 
     <!-- Title of the page -->
     <layout-page-title id="song-list">
-        My songbook
+        {{ 'my_songbook_title'|translate }}
 
         <layout-list-sorter data-count="songListCtrl.entities.length" data-current="songListCtrl.sortBy" data-reverse="songListCtrl.sortReverse" data-fields="songListCtrl.sortFields"></layout-list-sorter>
     </layout-page-title>
@@ -32,6 +32,8 @@
                     <small data-ng-if="null !== entity.artist">{{ entity.artist }}</small>
                 </h2>
 
+                <score-field class="pull-right" data-model="entity.mastery" data-icon="music-icon music-icon-note"></score-field>
+
                 <a class="btn btn-round btn-default" href="#/songs/{{ entity.id }}">
                     <span class="fa fa-fw fa-eye"></span>
                     <span class="sr-only">show</span>
@@ -45,7 +47,7 @@
         </div>
 
         <div class="empty-list" data-ng-if="songListCtrl.entities.length === 0">
-            no_song_found
+            {{ 'no_song_found'|translate }}
         </div>
     </div>
 </layout-page>
