--- a/web/client/app/SongBook/Partial/list.html
+++ b/web/client/app/SongBook/Partial/list.html
@@ -32,17 +32,33 @@
                     <small data-ng-if="null !== entity.artist">{{ entity.artist }}</small>
                 </h2>
 
-                <score-field class="pull-right" data-model="entity.mastery" data-icon="music-icon music-icon-note"></score-field>
+                <div class="row">
+                    <!-- Rating -->
+                    <score-field class="col-md-6 text-center" data-model="entity.rating"></score-field>
 
-                <a class="btn btn-round btn-default" href="#/songs/{{ entity.id }}">
-                    <span class="fa fa-fw fa-eye"></span>
-                    <span class="sr-only">show</span>
-                </a>
+                    <!-- Mastery -->
+                    <score-field class="col-md-6 text-center" data-model="entity.mastery" data-icon="music-icon music-icon-note"></score-field>
+                </div>
 
-                <a class="btn btn-round btn-default" href="#/songs/{{ entity.id }}/edit">
-                    <span class="fa fa-fw fa-pencil"></span>
-                    <span class="sr-only">edit</span>
-                </a>
+                <div class="song-item-btn-group pull-right">
+                    <a class="btn btn-danger" href="#/songs/{{ entity.id }}/edit">
+                        <span class="fa fa-fw fa-trash-o"></span>
+                        delete
+                        <!--<span class="sr-only">edit</span>-->
+                    </a>
+
+                    <a class="btn btn-default" href="#/songs/{{ entity.id }}/edit">
+                        <span class="fa fa-fw fa-pencil"></span>
+                        edit
+                        <!--<span class="sr-only">edit</span>-->
+                    </a>
+
+                    <a class="btn btn-default" href="#/songs/{{ entity.id }}">
+                        <span class="fa fa-fw fa-eye"></span>
+                        show
+                        <!--<span class="sr-only">show</span>-->
+                    </a>
+                </div>
             </div>
         </div>
 
