--- a/web/client/less/app/app.less
+++ b/web/client/less/app/app.less
@@ -35,10 +35,12 @@
 
 // Bundles styles
 @import "bundles/theory.less";
-@import "bundles/song_book.less";
 @import "bundles/instrument.less";
 @import "bundles/guitar.less";
 @import "bundles/guitar_neck.less";
 @import "bundles/user.less";
 @import "bundles/sheet_music.less";
 @import "bundles/advertisement.less";
+
+// Modules styles
+@import "modules/SongBook/module.less";
