--- a/web/client/app/SongBook/Partial/list.html
+++ b/web/client/app/SongBook/Partial/list.html
@@ -22,7 +22,7 @@
         <div class="song-item panel panel-default row" data-ng-class="{ 'panel-last': $last }" data-ng-repeat="entity in songListCtrl.entities|orderBy:songListCtrl.sortBy:songListCtrl.sortReverse" data-ng-if="songListCtrl.entities.length !== 0">
             <!-- Image -->
             <div class="cover col-md-1 col-sm-2 col-xs-3">
-                <img class="img-responsive" data-ng-src="{{ (entity.cover.path || 'uploads/no-cover.png')|resource_path }}" />
+                <img class="img-responsive" data-ng-src="{{ entity.cover.path ? (entity.cover.path|resource_path) : ('images/no-cover.png'|asset_path) }}" />
             </div>
 
             <!-- Info -->
@@ -39,29 +39,28 @@
                     <!-- Mastery -->
                     <score-field class="col-md-6 text-center" data-model="entity.mastery" data-icon="music-icon music-icon-note"></score-field>
                 </div>
+            </div>
 
-                <div class="song-item-btn-group pull-right">
-                    <a class="btn btn-danger" href="#/songs/{{ entity.id }}/edit">
-                        <span class="fa fa-fw fa-trash-o"></span>
-                        delete
-                        <!--<span class="sr-only">edit</span>-->
-                    </a>
+            <!-- Item buttons -->
+            <div class="song-item-btn-group">
+                <a class="btn btn-danger" href="" data-ng-click="songListCtrl.removeSong(entity)">
+                    <span class="fa fa-trash-o"></span>
+                    <span class="sr-only">{{ 'delete_song'|translate }}</span>
+                </a>
 
-                    <a class="btn btn-default" href="#/songs/{{ entity.id }}/edit">
-                        <span class="fa fa-fw fa-pencil"></span>
-                        edit
-                        <!--<span class="sr-only">edit</span>-->
-                    </a>
+                <a class="btn btn-default" href="#/songs/{{ entity.id }}/edit">
+                    <span class="fa fa-pencil"></span>
+                    <span class="sr-only">{{ 'edit_song'|translate }}</span>
+                </a>
 
-                    <a class="btn btn-default" href="#/songs/{{ entity.id }}">
-                        <span class="fa fa-fw fa-eye"></span>
-                        show
-                        <!--<span class="sr-only">show</span>-->
-                    </a>
-                </div>
+                <a class="btn btn-default" href="#/songs/{{ entity.id }}">
+                    <span class="fa fa-eye"></span>
+                    <span class="sr-only">{{ 'show_song'|translate }}</span>
+                </a>
             </div>
         </div>
 
+        <!-- No element message -->
         <div class="empty-list" data-ng-if="songListCtrl.entities.length === 0">
             {{ 'no_song_found'|translate }}
         </div>
