update theme + styles for modals

--- a/web/client/less/app/app.less
+++ b/web/client/less/app/app.less
@@ -25,11 +25,13 @@
 @import "components/forms.less";
 @import "components/header.less";
 @import "components/list.less";
-@import "components/sidebar.less";
-@import "components/wizard.less";
-@import "components/page.less";
-@import "components/scrollbar.less";
+@import "components/modals.less";
 @import "components/navbar.less";
+@import "components/page.less";
+@import "components/panels.less";
+@import "components/sidebar.less";
+@import "components/scrollbar.less";
+@import "components/wizard.less";
 
 @import "theme.less";
 
