--- a/web/client/less/app/components/dropdown.less
+++ b/web/client/less/app/components/dropdown.less
@@ -1,43 +1,65 @@
-.dropdown-menu {
-    left: 1px;
-    border-top: none;
-    border-radius: 0 0 3px 3px;
+.dropdown {
+    .dropdown-menu {
+        left: 1px;
+        border-top: none;
+        border-radius: 0 0 3px 3px;
+        .box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+        .transition(@transition-base);
 
-    > li {
-        position: relative;
-        border-top: 1px dashed #0c0c0c;
+        // Override the default Bootstrap show/hide to be able to add a CSS transition on it
+        display: block;
+        opacity: 0;
+        visibility: hidden;
 
-        &:last-child {
-            border-bottom: 1px dashed #0c0c0c;
-        }
+        > li {
+            position: relative;
+            border-top: 1px dashed #0c0c0c;
 
-        a {
-            padding: 5px 20px;
-        }
-
-        .fa-check {
-            position: absolute;
-            right: 15px;
-            padding: 3px;
-
-            color: darken(@dropdown-bg, 2%);
-        }
-
-        &.active {
-            a {
-                color: @brand-primary;
-                background: @dropdown-bg;
+            &:last-child {
+                border-bottom: 1px dashed #0c0c0c;
             }
 
-            a:hover,
-            a:focus {
-                color: @brand-primary;
-                background: @dropdown-link-hover-bg;
+            a {
+                padding: 5px 20px;
             }
 
             .fa-check {
-                color: @brand-primary;
+                position: absolute;
+                right: 15px;
+                padding: 3px;
+
+                color: darken(@dropdown-bg, 2%);
             }
+
+            &.active {
+                a {
+                    color: @brand-primary;
+                    background: @dropdown-bg;
+                }
+
+                a:hover,
+                a:focus {
+                    color: @brand-primary;
+                    background: @dropdown-link-hover-bg;
+                }
+
+                .fa-check {
+                    color: @brand-primary;
+                }
+            }
+        }
+
+        .divider {
+            margin: 5px 0;
+        }
+    }
+
+    // Override the default Bootstrap show/hide to be able to add a CSS transition on it
+    &.open {
+        .dropdown-menu {
+            visibility: visible;
+            display: block;
+            opacity: 1;
         }
     }
 }
