--- a/web/client/less/app/theme.less
+++ b/web/client/less/app/theme.less
@@ -26,12 +26,18 @@ input[type=button],
 input[type=submit],
 input[type=reset] {
     outline: 0 !important;
+
+    /* add transition effect */
+    .transition(@transition-base);
+
+    &:after,
+    &:before {
+        .transition(@transition-base);
+    }
 }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-    /*font-variant: small-caps;*/
-
     small {
         font-variant: normal;
     }
@@ -43,16 +49,7 @@ h2, .h2 {
     color: @gray;
 }
 
-.dropdown-menu {
-    .box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
-
-    .divider {
-        margin: 5px 0;
-    }
-}
-
 .content {
-    /*z-index: 2;*/
     position: relative;
     height: 100%;
     overflow-y: auto;
@@ -79,6 +76,7 @@ h2, .h2 {
             position: relative;
         }
     }
+
     .page-header {
         border-bottom: none;
         color: @brand-primary;
@@ -109,41 +107,6 @@ h2, .h2 {
     }
 }
 
-.big-icon, .user-logo {
-    margin: 0 auto;
-    vertical-align: middle;
-    color: @brand-primary;
-    border: 4px solid @brand-primary;
-
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
-
-    .fa {
-        vertical-align: middle;
-
-        font-size: 70px;
-        margin-top: 20px;
-    }
-}
-
-.panel {
-    .box-shadow(none);
-    border: none;
-    margin-bottom: 15px;
-}
-
-.login-form,
-.register-form {
-    background: rgba(0, 0, 0, 0.25);
-    padding: @line-height-computed 0;
-    margin-bottom: @line-height-computed;
-
-    h1 {
-        color: @brand-primary;
-    }
-}
-
 .section-header {
     text-align: center;
 
@@ -161,23 +124,5 @@ h2, .h2 {
         &:after {
 
         }
-    }
-}
-
-fieldset {
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    border-radius: @border-radius-base;
-    padding: floor(@grid-gutter-width / 2);
-
-    legend {
-        color: fadeOut(@brand-primary, 60%);
-        font-size: @font-size-base;
-        /*font-weight: 900;*/
-        padding: 0 15px;
-        border: none;
-        display: inline-block;
-        margin-bottom: 0;
-        width: auto;
-        line-height: 0;
     }
 }
