--- a/web/client/app/Theory/Partial/summary.html
+++ b/web/client/app/Theory/Partial/summary.html
@@ -7,5 +7,6 @@
     <ul>
         <li><a href="#/theory/intervals">List of intervals</a></li>
         <li><a href="#/theory/notes">Notes reference</a></li>
+        <li><a href="#/theory/chords">Chords reference</a></li>
     </ul>
 </layout-page>
