add label for future configuration

--- a/web/client/app/User/Partial/settings.html
+++ b/web/client/app/User/Partial/settings.html
@@ -1,30 +1,59 @@
-<layout-page>
+<layout-page class="settings">
     <!-- Title of the page -->
     <layout-page-title>
         My settings
     </layout-page-title>
 
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div class="form-group">
-                <label for="" class="control-label">Language</label>
-            </div>
+    <fieldset class="form-group">
+        <legend>Localization</legend>
 
-            <div class="form-group">
-                <label for="" class="control-label">Currency</label>
-            </div>
+        <div class="panel panel-default panel-last">
+            <div class="panel-body">
+                <div class="form-group">
+                    <label for="" class="control-label">Language</label>
+                </div>
 
-            <div class="form-group">
-                <label for="" class="control-label">Date Format</label>
-            </div>
+                <div class="form-group">
+                    <label for="" class="control-label">Currency</label>
+                </div>
 
-            <div class="form-group">
-                <label for="" class="control-label">Display Flat or Sharp</label>
-            </div>
-
-            <div class="form-group">
-                <label for="" class="control-label">List default display</label>
+                <div class="form-group">
+                    <label for="" class="control-label">Date Format</label>
+                </div>
             </div>
         </div>
+    </fieldset>
+
+    <fieldset class="form-group">
+        <legend>Music</legend>
+
+        <div class="panel panel-default panel-last">
+            <div class="panel-body">
+                <div class="form-group">
+                    <label for="" class="control-label">Display Flat or Sharp</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="" class="control-label">Display Interval (semitones / name / symbol)</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="" class="control-label">Diapason (Note = A / Octave = 3 / Frequency = 440Hz)</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="" class="control-label">Score display (Only score / Only tab / Both)</label>
+                </div>
+
+            </div>
+        </div>
+    </fieldset>
+
+    <div class="form-group">
+        <label for="" class="control-label">Volume</label>
+    </div>
+
+    <div class="form-group">
+        <label for="" class="control-label">List default display</label>
     </div>
 </layout-page>
