--- a/web/client/less/app/bundles/guitar.less
+++ b/web/client/less/app/bundles/guitar.less
@@ -73,7 +73,7 @@
     .guitar-link,
     .scale-link {
         position: relative;
-        padding-right: 60px;
+        padding-right: 60px !important;
 
         .fa {
             font-size: 20px;
