--- a/web/client/less/app/bundles/user.less
+++ b/web/client/less/app/bundles/user.less
@@ -60,7 +60,7 @@
         padding-top: 0;
         border-radius: 3px;
 
-        li {
+        li, li:last-child {
             border: none;
         }
 
