--- a/web/client/less/app/variables.less
+++ b/web/client/less/app/variables.less
@@ -129,13 +129,13 @@
 //** Default background color used for all tables.
 @table-bg:                      transparent;
 //** Background color used for `.table-striped`.
-@table-bg-accent:               #f9f9f9;
+@table-bg-accent:               rgba(0, 0, 0, 0.25);
 //** Background color used for `.table-hover`.
-@table-bg-hover:                #f5f5f5;
+@table-bg-hover:                rgba(0, 0, 0, 0.5);
 @table-bg-active:               @table-bg-hover;
 
 //** Border color for table and cell borders.
-@table-border-color:            #ddd;
+@table-border-color:            rgba(0, 0, 0, 0.5);
 
 
 //== Buttons
