--- a/web/client/less/fonts/MusicFont/less/icons.less
+++ b/web/client/less/fonts/MusicFont/less/icons.less
@@ -3,3 +3,4 @@
 .@{music-icon-css-prefix}-music-folder:before     { content: @music-icon-var-music-folder; }
 .@{music-icon-css-prefix}-note:before             { content: @music-icon-var-note; }
 .@{music-icon-css-prefix}-note-o:before           { content: @music-icon-var-note-o; }
+.@{music-icon-css-prefix}-tempo:before            { content: @music-icon-var-tempo; }
