--- a/web/client/less/fonts/MusicFont/less/variables.less
+++ b/web/client/less/fonts/MusicFont/less/variables.less
@@ -12,3 +12,4 @@
 @music-icon-var-music-folder:     "\043";
 @music-icon-var-note:             "\044";
 @music-icon-var-note-o:           "\045";
+@music-icon-var-tempo:            "\046";
