--- a/web/client/less/app/components/dropdowns.less
+++ b/web/client/less/app/components/dropdowns.less
@@ -1,6 +1,5 @@
 .dropdown {
     .dropdown-menu {
-        left: 1px;
         border-top: none;
         border-radius: 0 0 3px 3px;
         .box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
@@ -11,8 +10,8 @@
         opacity: 0;
         visibility: hidden;
 
-        > li {
-            position: relative;
+        /* We need to redefine Bootstrap styles because the scrollbar break the DOM structure */
+        li {
             border-top: 1px dashed #0c0c0c;
 
             &:last-child {
@@ -21,6 +20,24 @@
 
             a {
                 padding: 5px 20px;
+                display: block;
+                clear: both;
+                font-weight: normal;
+                line-height: @line-height-base;
+                color: @dropdown-link-color;
+                white-space: nowrap; // prevent links from randomly breaking onto new lines
+
+                &:hover,
+                &:focus {
+                    text-decoration: none;
+                    color: @dropdown-link-hover-color;
+                    background-color: @dropdown-link-hover-bg;
+                }
+            }
+
+            .link-label {
+                display: block;
+                color: @brand-primary;
             }
 
             .fa-check {
@@ -34,13 +51,15 @@
             &.active {
                 a {
                     color: @brand-primary;
-                    background: @dropdown-bg;
-                }
+                    background: lighten(@dropdown-link-hover-bg, 1%);
 
-                a:hover,
-                a:focus {
-                    color: @brand-primary;
-                    background: @dropdown-link-hover-bg;
+                    &:hover,
+                    &:focus {
+                        color: @brand-primary;
+                        background: @dropdown-link-hover-bg;
+                        text-decoration: none;
+                        outline: 0;
+                    }
                 }
 
                 .fa-check {
