--- a/web/client/less/app/components/scrollbar.less
+++ b/web/client/less/app/components/scrollbar.less
@@ -9,7 +9,8 @@
     }
 }
 
-.mCustomScrollBox{ /* contains plugin's markup */
+/* contains plugin's markup */
+.mCustomScrollBox {
     position: relative;
     overflow: hidden;
     height: 100%;
@@ -18,7 +19,8 @@
     direction: ltr;
 }
 
-.mCSB_container{ /* contains the original content */
+/* contains the original content */
+.mCSB_container {
     overflow: hidden;
     width: auto;
     height: auto;
@@ -31,7 +33,9 @@ y-axis
 ------------------------------------------------------------------------------------------------------------------------
 */
 
-.mCSB_inside > .mCSB_container{ margin-right: 10px; }
+.mCSB_inside > .mCSB_container {
+    margin-right: 15px;
+}
 
 .mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden{ margin-right: 0; } /* non-visible scrollbar */
 
@@ -293,7 +297,7 @@ yx-axis
 
 .mCSB_scrollTools {/* contains scrollbar markup (draggable element, dragger rail, buttons etc.) */
     position: absolute;
-    width: 16px;
+    width: 15px;
     height: auto;
     left: auto;
     top: 0;
