--- a/web/client/less/app/app.less
+++ b/web/client/less/app/app.less
@@ -20,7 +20,7 @@
 
 @import "components/alerts.less";
 @import "components/buttons.less";
-@import "components/dropdown.less";
+@import "components/dropdowns.less";
 @import "components/fields.less";
 @import "components/forms.less";
 @import "components/header.less";
