--- a/web/client/less/app/bundles/guitar.less
+++ b/web/client/less/app/bundles/guitar.less
@@ -51,16 +51,6 @@
 
     .dropdown-menu {
         left: 1px;
-        border-top: none;
-        border-radius: 0 0 3px 3px;
-
-        > li {
-            border-top: 1px dashed #0c0c0c;
-
-            &:last-child {
-                border-bottom: 1px dashed #0c0c0c;
-            }
-        }
     }
 
     .dropdown-header {
@@ -86,7 +76,7 @@
             color: darken(@dropdown-bg, 2%);
         }
 
-        &.selected {
+        &.active {
             .fa {
                 color: @brand-primary;
             }
@@ -96,11 +86,6 @@
     .navbar-text,
     .guitar-link,
     .scale-link{
-        .link-label {
-            display: block;
-            color: @brand-primary;
-        }
-
         small {
             color: @navbar-default-link-color;
         }
@@ -108,6 +93,11 @@
 
     .navbar-text {
         margin: 10px;
+
+        .link-label {
+            display: block;
+            color: @brand-primary;
+        }
     }
 }
 
