--- a/web/client/less/app/modules/Theory/interval.less
+++ b/web/client/less/app/modules/Theory/interval.less
@@ -9,13 +9,55 @@
  * Interval Player
  */
 .interval-player {
+    position: relative;
+
     .interval-player-header {
         margin: 0;
+        padding: 4px 15px;
+        background: @panel-bg;
+
+        .no-interval {
+            color: @gray;
+            font-size: @font-size-base;
+        }
+
+        > a {
+            display: block;
+            padding: 5px 0;
+        }
+
+        .dropdown-menu {
+            min-width: 100%;
+
+            a {
+                position: relative;
+                padding-right: 60px !important;
+
+                .fa {
+                    font-size: 20px;
+                    height: 20px;
+                    line-height: 20px;
+                    position: absolute;
+                    right: 15px;
+                    top: 10px;
+
+                    color: darken(@dropdown-bg, 2%);
+                }
+            }
+
+            li.active {
+                .fa {
+                    color: @brand-primary;
+                }
+            }
+
+        }
     }
 
     .interval-player-current {
         position: relative;
         width: 100%;
+        height: 100%;
         display: table;
         vertical-align: middle;
 
@@ -24,6 +66,7 @@
             display: table-cell;
             width: floor(100% / 3);
             vertical-align: middle;
+            height: 100%;
         }
 
         .interval {
@@ -37,7 +80,7 @@
                 vertical-align: middle;
                 position: relative;
                 display: inline-block;
-                background: darken(@text-color, 50%);
+                background: @gray-darker;
                 color: black;
                 border-radius: 40px;
                 font-size: @font-size-large;
@@ -54,37 +97,38 @@
                 left: 0;
                 right: 0;
                 height: 3px;
-                background-color: darken(@text-color, 50%);
-                transform: translate(0, -50%);
+                background-color: @gray-darker;
+            }
+
+            &.unison:before {
+                transform: rotate(0) !important;
             }
 
             &.ascending:before {
-                transform: translate(0, -50%) rotate(-15deg);
+                transform: rotate(-15deg);
             }
 
             &.descending:before {
-                transform: translate(0, -50%) rotate(15deg);
+                transform: rotate(15deg);
             }
         }
     }
 
+    .calculated-note,
     .reference-note {
         font-size: 46px;
+        position: relative;
+
+        > span {
+            display: block;
+            font-size: @font-size-base;
+            color: @gray;
+            margin-bottom: 10px;
+        }
 
         a {
             display: block;
         }
-
-        div {
-            display: inline-block;
-            border-radius: 100px;
-            border: 3px solid @text-color;
-            padding: 15px;
-        }
-    }
-
-    .calculated-note {
-        font-size: 46px;
 
         div {
             display: inline-block;
