--- a/web/client/app/Instrument/Partial/menu.html
+++ b/web/client/app/Instrument/Partial/menu.html
@@ -11,8 +11,8 @@
         </a>
 
         <ul class="dropdown-menu">
-            <li>
-                <a href="#" class="scale-link selected">
+            <li class="active">
+                <a href="#" class="scale-link">
                     <span class="link-label">Standard</span>
                     <small>E A D G B E</small>
 
@@ -76,8 +76,8 @@
 
             <li class="dropdown-header">My guitars</li>
 
-            <li>
-                <a href="#" class="guitar-link selected">
+            <li class="active">
+                <a href="#" class="guitar-link">
                     <span class="link-label">Jackson SLATTXMG 3-6 SG</span>
                     <small>E A D G B E</small>
 
