implements Theory UI

--- a/web/client/app/Theory/Partial/Note/index.html
+++ b/web/client/app/Theory/Partial/Note/index.html
@@ -21,7 +21,7 @@
 
         <div class="col-md-7">
             <ul class="list-group">
-                <li class="list-group-item" data-ng-repeat="entity in noteListCtrl.entities">{{ entity.name }}</li>
+                <li class="list-group-item" data-ng-repeat="entity in noteListCtrl.entities">{{ entity.info.name }}</li>
             </ul>
         </div>
     </div>
