--- a/web/client/app/Theory/Partial/Interval/index.html
+++ b/web/client/app/Theory/Partial/Interval/index.html
@@ -5,26 +5,26 @@
     </layout-page-title>
 
     <div class="row">
-        <div class="col-md-6">
-            <interval-player data-interval="intervalListCtrl.selected" data-intervals="intervalListCtrl.entities"></interval-player>
+        <div class="col-md-5">
+            <interval-player data-interval="intervalListCtrl.selected"></interval-player>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-7">
             <div class="panel panel-default">
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th>Semitones</th>
-                            <th>Name</th>
                             <th>Symbol</th>
+                            <th>Name</th>
+                            <th>Semitones</th>
                         </tr>
                     </thead>
 
                     <tbody>
                         <tr data-ng-click="intervalListCtrl.selectInterval(entity)" data-ng-repeat="entity in intervalListCtrl.entities" data-ng-class="{ 'active': entity === intervalListCtrl.selected }">
-                            <td>{{ entity.value }}</td>
-                            <td>{{ entity.name }}</td>
                             <td>{{ entity.symbol }}</td>
+                            <td>{{ entity.name }}</td>
+                            <td>{{ entity.value }}</td>
                         </tr>
                     </tbody>
                 </table>
