--- a/web/client/app/Theory/Partial/Interval/player.html
+++ b/web/client/app/Theory/Partial/Interval/player.html
@@ -1,72 +1,103 @@
-<div class="interval-player text-center panel panel-default">
+<div class="interval-player panel panel-default">
     <div class="panel-body">
-        <!-- Selected interval -->
-        <h2 class="interval-player-header" data-uib-dropdown="">
+        <!-- Direction of the interval -->
+        <div class="row">
+            <div class="col-md-6">
+                <!-- Interval selector -->
+                <h2 class="interval-player-header" data-uib-dropdown="">
+                    <a href id="interval-player-dropdown" data-uib-dropdown-toggle="">
+                        <!-- Current selected interval -->
+                        <span data-ng-if="intervalPlayerCtrl.interval">
+                            {{ intervalPlayerCtrl.interval.symbol }} <small>{{ intervalPlayerCtrl.interval.name }}</small>
+                        </span>
 
+                        <!-- No interval selected -->
+                        <em class="no-interval" data-ng-if="!intervalPlayerCtrl.interval">
+                            -- {{ 'interval_select'|translate }} --
+                        </em>
 
-            <a href id="simple-dropdown" data-uib-dropdown-toggle="">
-                {{ intervalPlayerCtrl.interval.name || '?' }}
-                <span class="caret"></span>
-            </a>
-            <ul class="uib-dropdown-menu" aria-labelledby="simple-dropdown">
-                <li ng-repeat="choice in intervalPlayerCtrl.intervals">
-                    <a href>{{choice.name}}</a>
-                </li>
-            </ul>
-        </h2>
+                        <span class="fa fa-caret-down pull-right"></span>
+                    </a>
 
-        <div class="interval-player-current">
+                    <ul class="uib-dropdown-menu" aria-labelledby="interval-player-dropdown" data-layout-scrollable="" data-layout-scrollable-options="intervalPlayerCtrl.dropdownOptions">
+                        <li data-ng-repeat="interval in intervalPlayerCtrl.intervals" data-ng-class="{ 'active': interval === intervalPlayerCtrl.interval }">
+                            <a href="" data-ng-click="intervalPlayerCtrl.setInterval(interval)">
+                                <span class="link-label"><b>{{ interval.symbol }}</b> - {{ interval.name }}</span>
+                                <small data-translate="semitone_count"
+                                       data-translate-values="{ COUNT: interval.value }"
+                                       data-translate-interpolation="messageformat"></small>
+
+                                <span class="fa fa-check"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </h2>
+            </div>
+
+            <!-- Direction -->
+            <div class="col-md-3 text-center">
+                <buttton type="button" class="btn btn-default text-left" data-ng-click="intervalPlayerCtrl.setDirection('ascending')" data-ng-class="{active: 'ascending' === intervalPlayerCtrl.direction}" data-uib-tooltip="{{ 'interval_ascending'| translate }}" data-tooltip-placement="bottom">
+                    <span class="fa fa-fw fa-long-arrow-up" data-ng-class="{'text-primary': 'ascending' === intervalPlayerCtrl.direction}"></span>
+                    <span class="sr-only">{{ 'interval_ascending'|translate }}</span>
+                </buttton>
+
+                <buttton type="button" class="btn btn-default text-right" data-ng-click="intervalPlayerCtrl.setDirection('descending')" data-ng-class="{active: 'descending' === intervalPlayerCtrl.direction}" data-uib-tooltip="{{ 'interval_descending'| translate }}" data-tooltip-placement="bottom">
+                    <span class="fa fa-fw fa-long-arrow-down" data-ng-class="{'text-primary': 'descending' === intervalPlayerCtrl.direction}"></span>
+                    <span class="sr-only">{{ 'interval_descending'|translate }}</span>
+                </buttton>
+            </div>
+
+            <!-- Tempo -->
+            <div class="col-md-3">
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <span class="music-icon music-icon-tempo"></span>
+                    </div>
+                    <input type="text" class="form-control text-right" placeholder="tempo" data-ng-model="intervalPlayerCtrl.tempo" />
+                </div>
+            </div>
+        </div>
+
+        <div class="interval-player-current text-center">
             <!-- Reference note -->
             <div class="reference-note current-col">
-                <a role="button" href="">
+                <a role="button" href="" data-ng-click="intervalPlayerCtrl.incrementReference()">
                     <span class="fa fa-caret-up"></span>
                 </a>
 
                 <div>
-                    E <sub>2</sub>
+                    {{ intervalPlayerCtrl.referenceNote.info.name }}
+                    <sub>{{ intervalPlayerCtrl.referenceNote.octave }}</sub>
                 </div>
 
-                <a role="button" href="">
+                <a role="button" href="" data-ng-click="intervalPlayerCtrl.decrementReference()">
                     <span class="fa fa-caret-down"></span>
                 </a>
             </div>
 
             <!-- Current interval -->
-            <div class="interval current-col {{ intervalPlayerCtrl.direction }}">
+            <div class="interval current-col {{ intervalPlayerCtrl.direction }}" data-ng-class="{unison: 0 == intervalPlayerCtrl.interval.value, ascending: 'ascending' === intervalPlayerCtrl.direction, descending: 'descending' === intervalPlayerCtrl.direction}">
                 <div class="interval-semitones">
-                    {{ intervalPlayerCtrl.interval.value || '?' }}
+                    {{ ((0 === intervalPlayerCtrl.interval.value || intervalPlayerCtrl.interval.value) ? intervalPlayerCtrl.interval.value : '?') }}
                 </div>
             </div>
 
             <!-- Calculated note -->
             <div class="calculated-note current-col">
                 <div>
-                    E <sub>2</sub>
+                    {{ intervalPlayerCtrl.calculatedNote.info.name || '?' }}
+                    <sub>{{ ((0 === intervalPlayerCtrl.calculatedNote.octave || intervalPlayerCtrl.calculatedNote.octave) ? intervalPlayerCtrl.calculatedNote.octave : '?') }}</sub>
                 </div>
+
+                <!-- No calculated note
+                <div data-ng-if="!intervalPlayerCtrl.calculatedNote">? <sub>?</sub></div>-->
             </div>
         </div>
-
-        <!-- Direction of the interval -->
-        <div class="row">
-            <div class="col-md-12">
-                <buttton type="button" class="btn" data-ng-click="intervalPlayerCtrl.setDirection('ascending')" data-ng-class="{'btn-default': 'ascending' !== intervalPlayerCtrl.direction, 'btn-primary': 'ascending' === intervalPlayerCtrl.direction}">
-                    <span class="fa fa-long-arrow-up"></span>
-                    Ascending
-                </buttton>
-
-                <buttton type="button" class="btn" data-ng-click="intervalPlayerCtrl.setDirection('descending')" data-ng-class="{'btn-default': 'descending' !== intervalPlayerCtrl.direction, 'btn-primary': 'descending' === intervalPlayerCtrl.direction}">
-                    <span class="fa fa-long-arrow-down"></span>
-                    Descending
-                </buttton>
-            </div>
-        </div>
-
-        <br/>
 
         <!-- Play button -->
         <button type="button" class="btn btn-lg btn-block btn-default" data-ng-click="intervalPlayerCtrl.playInterval()" data-ng-class="{disabled: null === intervalPlayerCtrl.interval}">
             <span class="fa fa-fw fa-play"></span>
-            Play
+            {{ 'interval_play'|translate }}
         </button>
     </div>
 </div>
